Don't try to render composited selection in throttled frame

If a frame is throttled (i.e., offscreen) and has focus, we should not
try to render a composited selection for it because its layout
information might be out of date.

BUG=602334

Review URL: https://codereview.chromium.org/1891453002

Cr-Commit-Position: refs/heads/master@{#387047}

Former-commit-id: c8d969a6d0378200d361d49ebe2b89c9449d9928